--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,8 +22,7 @@
     <string name="menu_star">Add to Favorites</string>
     <string name="menu_unstar">Remove from Favorites</string>
     <string name="menu_map">Show on map</string>
-    <string name="menu_www">See website</string>
-    <string name="menu_call">Call %1$s</string>
+    <string name="menu_info">More information</string>
 
     <string name="netwok_error">Network Error. Data may be obsolete.</string>
 
