--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="app_name_short">Ontap</string>
     <string name="memory_key" translatable="false">com.kosert.ontap.ONTAP_MEMORY</string>
     <string name="preference_key" translatable="false">com.kosert.ontap.ONTAP_PREFS</string>
+    <string name="favorites_key" translatable="false">com.kosert.ontap.ONTAP_FAVS</string>
 
     <string name="label_favs">Favorites</string>
     <string name="label_cities">Cities</string>
