--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,6 +23,8 @@
 
     <string name="menu_star">Add to Favorites</string>
     <string name="menu_unstar">Remove from Favorites</string>
+    <string name="menu_follow">Notify about changes</string>
+    <string name="menu_unfollow">Stop notifying</string>
     <string name="menu_map">Show on map</string>
     <string name="menu_info">More information</string>
 
@@ -31,6 +33,7 @@
     <string name="toast_starred">%1$s added to favorites!</string>
     <string name="toast_unstarred">%1$s removed from favorites!</string>
     <string name="toast_not_implemented">Not implemented yet :&lt;</string>
+    <string name="toast_cache_cleared">Cache memory cleared!</string>
 
     <string name="settings_notifications">Notifications</string>
     <string name="settings_following">Pubs you follow</string>
