--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,7 @@
     <string name="menu_edit">Edit</string>
     <string name="menu_save">Save</string>
     <string name="menu_preferences">Preferences</string>
+    <string name="menu_help">Help</string>
 
     <string name="taps">%1$d taps</string>
     <string name="loading">Loading…</string>
