--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,5 +57,6 @@
     <string name="github_url">github.com/Kosert/OntapUnofficial</string>
     <string name="version">Version %1$s</string>
 
+    <string name="notification_service">Notification Service.</string>
 
 </resources>
