--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,6 +32,7 @@
     <string name="dialog_map">Show on map</string>
     <string name="dialog_website">Go to website</string>
     <string name="dialog_facebook">Go to facebook page</string>
+    <string name="dialog_messenger">Contact on Messenger</string>
     <string name="dialog_call">Call %1$s</string>
 
     <string name="netwok_error">Network Error. Data may be obsolete.</string>
