--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,7 +18,11 @@
     <string name="menu_preferences">Preferences</string>
     <string name="menu_help">Help</string>
 
-    <string name="taps">%1$d taps</string>
+    <plurals name="taps">
+        <item quantity="one">%1$d tap</item>
+        <item quantity="other">%1$d taps</item>
+    </plurals>
+
     <string name="loading">Loading…</string>
     <string name="downloading">Downloading multitaps data…</string>
 
