--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,6 +60,13 @@
     <string name="settings_sound">Sound</string>
     <string name="settings_vibrate">Vibrate</string>
     <string name="settings_led">Blink LED</string>
+    <string name="settings_sync_period">Sync every</string>
+    <string-array name="settings_sync_times">
+        <item>5 minutes</item>
+        <item>15 minutes</item>
+        <item>30 minutes</item>
+        <item>60 minutes</item>
+    </string-array>
 
     <string name="about_title">About</string>
     <string name="github_url">github.com/Kosert/OntapUnofficial</string>
